--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "target": "es6",
     "baseUrl": "."
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "./src/schema.graphql"],
   "exclude": ["src/**/__tests__/**", "node_modules", "prisma"]
 }
