--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "devDependencies": {
     "@types/graphql": "^14.2.0",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
     "concurrently": "^4.1.0",
+    "eslint": "^5.16.0",
     "graphql-import": "^0.7.1",
     "nodemon": "^1.19.1",
     "typescript": "^3.5.1"
