--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "main": "dist/index.js",
   "scripts": {
     "watch": "concurrently -k npm:watch-*",
-    "watch-ts": "tsc --watch",
-    "watch-node": "nodemon -e \"js json graphql\" dist/index.js src/schema.graphql",
+    "watch-ts": "tsc --watch --preserveWatchOutput",
+    "watch-node": "nodemon -e \"js json graphql\" src/schema.graphql --delay 500ms",
     "generate": "prisma deploy"
   },
   "devDependencies": {
