--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
   "license": "ISC",
   "main": "dist/index.js",
   "scripts": {
-    "watch": "concurrently -k npm:watch-*",
-    "watch-ts": "tsc --watch --preserveWatchOutput",
-    "watch-node": "nodemon -e \"js json graphql\" src/schema.graphql --delay 500ms",
+    "build": "webpack --config webpack.$NODE_ENV.js",
+    "start": "nodemon src/index.js",
     "generate": "prisma deploy"
   },
   "devDependencies": {
     "@types/graphql": "^14.2.0",
+    "@types/webpack-env": "^1.13.9",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
-    "concurrently": "^4.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^5.16.0",
     "graphql-import": "^0.7.1",
+    "graphql-import-loader": "^0.2.1",
     "nodemon": "^1.19.1",
-    "typescript": "^3.5.1"
+    "ts-loader": "^6.0.2",
+    "typescript": "^3.5.1",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "apollo-server": "^2.6.3",
