--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
+    "module": "commonjs",
     "outDir": "dist",
+    "rootDir": "src",
+    "target": "es5",
+    "lib": ["dom", "es6"],
     "sourceMap": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
-    "esModuleInterop": true,
-    "module": "commonjs",
-    "target": "es6",
-    "baseUrl": "."
+    "esModuleInterop": true
   },
   "include": ["./src/**/*"],
   "exclude": ["src/**/__tests__/**", "node_modules", "prisma"]
