--- a/package.json
+++ b/package.json
@@ -8,20 +8,26 @@
   "scripts": {
     "docker-up": "docker-compose -f ./prisma/docker-compose.yml up -d",
     "watch": "concurrently -k npm:watch-*",
-    "watch-node": "nodemon src/index.js",
     "watch-ts": "webpack --config webpack.development.js",
+    "watch-node": "nodemon src/index.js",
     "build": "webpack --config webpack.production.js",
-    "generate": "prisma deploy"
+    "deploy": "cd prisma && prisma deploy",
+    "gcg": "graphql-codegen --config codegen.yml"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.3.0",
+    "@graphql-codegen/introspection": "1.3.0",
+    "@graphql-codegen/typescript": "1.3.0",
+    "@graphql-codegen/typescript-resolvers": "1.3.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/graphql": "^14.2.0",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/webpack-env": "^1.13.9",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^4.1.0",
     "eslint": "^5.16.0",
-    "graphql-import": "^0.7.1",
     "graphql-import-loader": "^0.2.1",
     "nodemon": "^1.19.1",
     "ts-loader": "^6.0.2",
@@ -33,8 +39,10 @@
   },
   "dependencies": {
     "apollo-server": "^2.6.3",
+    "bcryptjs": "^2.4.3",
     "graphql": "^14.3.1",
     "graphql-tools": "^4.0.4",
+    "jsonwebtoken": "^8.5.1",
     "prisma-client-lib": "^1.34.0"
   }
 }
